--- a/HealthClub/frontend/package.json
+++ b/HealthClub/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "watch": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,6 +41,9 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+         
     ]
   }
 }
+
+
