--- a/HealthClub/requirements.txt
+++ b/HealthClub/requirements.txt
@@ -1,22 +1,62 @@
+amqp==2.6.1
 asgiref==3.5.0
+attrs==21.4.0
+autobahn==22.2.2
+Automat==20.2.0
 backports.zoneinfo==0.2.1
+billiard==3.6.4.0
+celery==4.4.2
 certifi==2021.10.8
 cffi==1.15.0
+channels==3.0.4
 charset-normalizer==2.0.12
+click==8.0.4
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+constantly==15.1.0
 cryptography==36.0.1
-Django==4.0.3
+daphne==3.0.2
+defusedxml==0.7.1
+Deprecated==1.2.13
+Django==4.0.2
+django-allauth==0.49.0
+django-phone-field==1.8.1
 django-phonenumber-field==6.1.0
+django-phonenumbers==1.0.1
 djangorestframework==3.13.1
-fontawesomefree==5.15.4
+hyperlink==21.0.0
 idna==3.3
+incremental==21.3.0
+kombu==4.6.11
+nexmo==2.5.2
+oauthlib==3.2.0
+phonenumbers==8.12.44
 phonenumberslite==8.12.44
 Pillow==9.0.1
+prompt-toolkit==3.0.28
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 PyJWT==2.3.0
 PyMySQL==1.0.2
+pyOpenSSL==22.0.0
 python-dotenv==0.19.2
+python3-openid==3.2.0
 pytz==2021.3
+redis==2.10.3
 requests==2.27.1
+requests-oauthlib==1.3.1
+schedule==1.1.0
+service-identity==21.1.0
+six==1.16.0
 sqlparse==0.4.2
 twilio==7.7.0
+Twisted==22.2.0
+txaio==22.2.1
+typing-extensions==4.1.1
 urllib3==1.26.8
+vine==1.3.0
+wcwidth==0.2.5
+wrapt==1.13.3
+zope.interface==5.4.0
