--- a/HealthClub/requirements.txt
+++ b/HealthClub/requirements.txt
@@ -1,14 +1,17 @@
-amqp==2.6.1
+aioredis==1.3.1
+amqp==5.1.0
 asgiref==3.5.0
+async-timeout==4.0.2
 attrs==21.4.0
 autobahn==22.2.2
 Automat==20.2.0
 backports.zoneinfo==0.2.1
 billiard==3.6.4.0
-celery==4.4.2
+celery==5.2.3
 certifi==2021.10.8
 cffi==1.15.0
 channels==3.0.4
+channels-redis==3.3.1
 charset-normalizer==2.0.12
 click==8.0.4
 click-didyoumean==0.3.0
@@ -18,20 +21,23 @@ constantly==15.1.0
 cryptography==36.0.1
 daphne==3.0.2
 defusedxml==0.7.1
-Deprecated==1.2.13
-Django==4.0.2
+Django==3.2.12
 django-allauth==0.49.0
-django-phone-field==1.8.1
+django-celery-beat==2.2.1
+django-celery-results==2.3.0
+django-mathfilters==1.0.0
 django-phonenumber-field==6.1.0
-django-phonenumbers==1.0.1
+django-timezone-field==4.2.3
 djangorestframework==3.13.1
+fontawesome-free==5.15.4
+fontawesomefree==6.0.0
+hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
-kombu==4.6.11
-nexmo==2.5.2
+kombu==5.2.4
+msgpack==1.0.3
 oauthlib==3.2.0
-phonenumbers==8.12.44
 phonenumberslite==8.12.44
 Pillow==9.0.1
 prompt-toolkit==3.0.28
@@ -41,13 +47,13 @@ pycparser==2.21
 PyJWT==2.3.0
 PyMySQL==1.0.2
 pyOpenSSL==22.0.0
+python-crontab==2.6.0
+python-dateutil==2.8.2
 python-dotenv==0.19.2
 python3-openid==3.2.0
 pytz==2021.3
-redis==2.10.3
 requests==2.27.1
 requests-oauthlib==1.3.1
-schedule==1.1.0
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
@@ -56,7 +62,6 @@ Twisted==22.2.0
 txaio==22.2.1
 typing-extensions==4.1.1
 urllib3==1.26.8
-vine==1.3.0
+vine==5.0.0
 wcwidth==0.2.5
-wrapt==1.13.3
 zope.interface==5.4.0
